--- a/static/images/common/icon/iconfont.css
+++ b/static/images/common/icon/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1495355793402'); /* IE9*/
-  src: url('iconfont.eot?t=1495355793402#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1495355793402') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1495355793402') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1495355793402#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1495857887709'); /* IE9*/
+  src: url('iconfont.eot?t=1495857887709#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1495857887709') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1495857887709') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1495857887709#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -17,15 +17,23 @@
 
 .icon-buycar:before { content: "\e600"; }
 
+.icon-maijia:before { content: "\e62d"; }
+
 .icon-search:before { content: "\e615"; }
 
 .icon-down:before { content: "\e602"; }
+
+.icon-guanyu:before { content: "\e698"; }
+
+.icon-wode:before { content: "\e605"; }
 
 .icon-zhengpin:before { content: "\e672"; }
 
 .icon-baoyou:before { content: "\e72d"; }
 
 .icon-kucun:before { content: "\e6bf"; }
+
+.icon-maijia1:before { content: "\e619"; }
 
 .icon-help:before { content: "\e601"; }
 
