--- a/view/index.html
+++ b/view/index.html
@@ -528,6 +528,10 @@
             <p>江苏省&nbsp;&nbsp;&nbsp;&nbsp;无锡市&nbsp;&nbsp;&nbsp;&nbsp;滨湖区&nbsp;&nbsp;&nbsp;&nbsp;工业设计院&nbsp;&nbsp;&nbsp;&nbsp;214000</p>
             <p>&copy;copyright  无锡基瓦涡轮增压科技有限公司版权所有</p>
             <p>电话：134-0000-6785&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email：52971433@qq.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;传真：0510-8899-0099</p>
+            <p>
+                <img src="../static/images/common/cnhl.jpg" alt="">
+                <img src="../static/images/common/kx.jpg" alt="">
+            </p>
         </div>
     </div>
     <!-- footer end -->
