--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -686,5 +686,9 @@ ul{
   padding: 10px 0px;
   font-size: 12px;color: #999;
   line-height: 2;
+  img{
+    height: 25px;
+    margin: 10px;
+  }
 }
 /* footer end  */
