--- a/view/index.html
+++ b/view/index.html
@@ -356,7 +356,7 @@
         </div>
         <!-- 类别及报价 end -->
         <!-- 入驻商家 start -->
-        <div class="sellers">
+        <div class="index_sellers">
             <div class="flag">
                 入驻商家
             </div>
