--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -960,10 +960,12 @@ ul{
       .company{
         float: left;
         color: #999;
+        margin-top: 0px;
       }
       .address{
         color: #999;
         float: right;
+        margin-top: 0px;
       }
     }
   }
