--- a/view/卖家-公司相册.html
+++ b/view/卖家-公司相册.html
@@ -131,49 +131,72 @@
             </div>
 
             <div class="model">
-                <div class="head"><i class="iconfont icon-usermodel"></i>我们的公司</div>
+                <div class="head"><i class="iconfont icon-usermodel"></i>生产过程</div>
                 <div class="body">
                     <div class="upImgBox">
-                        <img src="../static/images/examples/com.jpg" alt="">
+                        <img src="../static/images/examples/com1.jpg" alt="">
                     </div>
                     <div class="upImgText">
-                        固万基是一家集设计、开发、生产、销售为一体的知名企业，15年来致力于生产高品质、高精密螺丝的企业，我们以为专注，所以专业！
+                        全自动设备，生产过程严格遵循TS16949
                     </div>
                 </div>
             </div>
 
             <div class="model">
-                <div class="head"><i class="iconfont icon-usermodel"></i>我们的公司</div>
+                <div class="head"><i class="iconfont icon-usermodel"></i>质量控制</div>
                 <div class="body">
                     <div class="upImgBox">
-                        <img src="../static/images/examples/com.jpg" alt="">
+                        <img src="../static/images/examples/com3.jpg" alt="">
                     </div>
                     <div class="upImgText">
-                        固万基是一家集设计、开发、生产、销售为一体的知名企业，15年来致力于生产高品质、高精密螺丝的企业，我们以为专注，所以专业！
+                        原材料完全使用标准建议的304不锈钢，生产过程严格建议，库存包装远离腐蚀性物品
                     </div>
                 </div>
             </div>
 
             <div class="model">
-                <div class="head"><i class="iconfont icon-usermodel"></i>我们的公司</div>
+                <div class="head"><i class="iconfont icon-usermodel"></i>我们的设备</div>
                 <div class="body">
                     <div class="upImgBox">
-                        <img src="../static/images/examples/com.jpg" alt="">
+                        <img src="../static/images/examples/com4.jpg" alt="">
                     </div>
                     <div class="upImgText">
-                        固万基是一家集设计、开发、生产、销售为一体的知名企业，15年来致力于生产高品质、高精密螺丝的企业，我们以为专注，所以专业！
+                        引进美国生产设备，自动化制造，人工严格质量监控，实现精细化生产。
                     </div>
                 </div>
             </div>
 
             <div class="model">
-                <div class="head"><i class="iconfont icon-usermodel"></i>我们的公司</div>
+                <div class="head"><i class="iconfont icon-usermodel"></i>我们的产品</div>
                 <div class="body">
                     <div class="upImgBox">
-                        <img src="../static/images/examples/com.jpg" alt="">
+                        <img src="../static/images/examples/com5.jpg" alt="">
                     </div>
                     <div class="upImgText">
-                        固万基是一家集设计、开发、生产、销售为一体的知名企业，15年来致力于生产高品质、高精密螺丝的企业，我们以为专注，所以专业！
+                        数千个品种的标准件，也可类似产品来图定做。
+                    </div>
+                </div>
+            </div>
+
+            <div class="model">
+                <div class="head"><i class="iconfont icon-usermodel"></i>我们的包装</div>
+                <div class="body">
+                    <div class="upImgBox">
+                        <img src="../static/images/examples/com6.jpg" alt="">
+                    </div>
+                    <div class="upImgText">
+                        油封袋小包装，纸盒大包装，长距离多重包装
+                    </div>
+                </div>
+            </div>
+            <div class="model">
+                <div class="head"><i class="iconfont icon-usermodel"></i>我们的包装</div>
+                <div class="body">
+                    <div class="upImgBox">
+                        <img src="../static/images/examples/com7.jpg" alt="">
+                    </div>
+                    <div class="upImgText">
+                        近万平米大型仓库，上千万种紧固件螺丝品牌，库存充足，环境优良
                     </div>
                 </div>
             </div>
